openshift-services/service-mesh/gateway2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway2
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway2
  ports:
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
