openshift-services/service-mesh/gateway2/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: istio-ingressgateway2
spec:
  to:
    kind: Service
    name: istio-ingressgateway2
    weight: 100
  port:
    targetPort: http2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
